--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,6 @@ tokio = { version = "1.26.0", features = ["full"] }
 tracing = "0.1.37"
 tracing-actix-web = "0.7.3"
 tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
+
+[dev-dependencies]
+pretty_assertions = "1.3.0"
