--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,15 +7,16 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4.3.1"
-anyhow = "1.0.70"
+anyhow = "1.0.71"
 mime = "0.3.17"
-serde = { version = "1.0.160", features = ["derive"] }
+serde = { version = "1.0.163", features = ["derive"] }
 serde_json = "1.0.96"
 thiserror = "1.0.40"
-tokio = { version = "1.27.0", features = ["full"] }
+tokio = { version = "1.28.1", features = ["full"] }
 tracing = "0.1.37"
-tracing-actix-web = "0.7.3"
-tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
+tracing-actix-web = "0.7.5"
+tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
+validator = { version = "0.16.0", features = ["derive"] }
 
 [dev-dependencies]
 pretty_assertions = "1.3.0"
